Sat Jan  5 04:05:19 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeChecker.java: check if variable
	  type is not void (gvar, lvar).

	* net/loveruby/cflat/compiler/TypeChecker.java: check if parameter
	  type is not void.

	* net/loveruby/cflat/compiler/TypeChecker.java: allow unallocated
	  array for parameter.

	* net/loveruby/cflat/compiler/TypeChecker.java: refactoring:
	  rename method: #resolve -> #check.

Sat Jan  5 03:43:42 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/type/Type.java: #textize -> #toString.

	* net/loveruby/cflat/type/IntegerType.java: ditto.

	* net/loveruby/cflat/type/ComplexType.java: ditto.

	* net/loveruby/cflat/type/StructType.java: ditto.

	* net/loveruby/cflat/type/FunctionType.java: ditto.

	* net/loveruby/cflat/type/VoidType.java: ditto.

	* net/loveruby/cflat/type/UserType.java: ditto.

	* net/loveruby/cflat/type/ArrayType.java: ditto.

	* net/loveruby/cflat/type/PointerType.java: ditto.

	* net/loveruby/cflat/type/TypeTable.java: ditto.

	* net/loveruby/cflat/type/UnionType.java: ditto.

	* net/loveruby/cflat/ast/Dumper.java: ditto.

	* net/loveruby/cflat/compiler/TypeChecker.java: ditto.

Fri Jan  4 08:30:55 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/Dumper.java: specialize TypeNode
	  printing.

	* net/loveruby/cflat/ast/Params.java: show parameter list.

	* net/loveruby/cflat/type/*TypeRef.java: define #toString.

Fri Jan  4 08:01:31 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java: implement command
	  line option --dump-ast.

	* net/loveruby/cflat/compiler/Compiler.java: implement command
	  line option --dump-tokens.

	* net/loveruby/cflat/ast/Dumper.java: new class; AST dumper.

	* net/loveruby/cflat/ast/Dumpable.java: new interface; AST dumper
	  interface.

	* net/loveruby/cflat/ast/*.java: define #dump, #_dump.

	* net/loveruby/cflat/asm/Assembler.java: fork
	  utils/TextUtils.java.
